--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,6 +3,11 @@ baseurl: ""
 # Download links
 ugene:
   doc_version: "38"
+  download_link_ugene_latest_linux_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-linux-x86-64.tar.gz"
+  download_link_ugene_latest_mac_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-mac-x86-64.dmg"
+  download_link_ugene_latest_sources_gz: "https://github.com/ugeneunipro/ugene/archive/refs/tags/38.1.tar.gz"
+  download_link_ugene_latest_sources_zip: "https://github.com/ugeneunipro/ugene/archive/refs/tags/38.1.zip"
+  download_link_ugene_latest_win_x86_64: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-win-x86-64.exe"
   download_link_ugene_latest_win_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-win-x86-64-portable.zip"
 
 exclude:
