--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,6 +9,7 @@ ugene:
   download_link_ugene_latest_sources_zip: "https://github.com/ugeneunipro/ugene/archive/refs/tags/38.1.zip"
   download_link_ugene_latest_win_x86_64: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-win-x86-64.exe"
   download_link_ugene_latest_win_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-win-x86-64-portable.zip"
+  next_release_tracker_link: "https://ugene.dev/tracker/projects/UGENE/issues/?filter=13756"
 
 exclude:
   - .jekyll-cache/
