--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,6 +4,9 @@ current_year: 2021
 
 # UGENE variables
 ugene:
+  release_version: "38.1"
+  release_date_MMM_YYYY_ru: "Март, 2021"
+  release_date_MMM_YYYY_en: "March, 2021"
   doc_version: "38"
   # Download links
   download_link_ugene_latest_linux_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-linux-x86-64.tar.gz"
@@ -12,6 +15,9 @@ ugene:
   download_link_ugene_latest_sources_zip: "https://github.com/ugeneunipro/ugene/archive/refs/tags/38.1.zip"
   download_link_ugene_latest_win_x86_64: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-win-x86-64.exe"
   download_link_ugene_latest_win_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-win-x86-64-portable.zip"
+  download_link_ugene_installer_linux: ""
+  download_link_ugene_installer_max: ""
+  download_link_ugene_installer_win: "http://archive.ugene.net/downloads/installer_windows_x32.exe"
   next_release_tracker_link: "https://ugene.dev/tracker/projects/UGENE/issues/?filter=13756"
   static:
     cite_link: "https://doi.org/10.1093/bioinformatics/bts091"
