--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,11 +2,14 @@ baseurl: ""
 
 current_year: 2021
 
+plugins:
+  - jekyll-sitemap
+
 # UGENE variables
 ugene:
   release_version: "38.1"
-  release_date_MMM_YYYY_ru: "Март, 2021"
-  release_date_MMM_YYYY_en: "March, 2021"
+  release_date_MMM_YYYY_ru: "Март, {{current_year}}"
+  release_date_MMM_YYYY_en: "March, {{current_year}}"
   doc_version: "38"
   # Download links
   download_link_ugene_latest_linux_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-linux-x86-64.tar.gz"
@@ -15,9 +18,9 @@ ugene:
   download_link_ugene_latest_sources_zip: "https://github.com/ugeneunipro/ugene/archive/refs/tags/38.1.zip"
   download_link_ugene_latest_win_x86_64: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-win-x86-64.exe"
   download_link_ugene_latest_win_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-win-x86-64-portable.zip"
-#  download_link_ugene_installer_linux: "http://archive.ugene.net/downloads/ugeneInstaller_64bit.tar"
-#  download_link_ugene_installer_mac: "http://archive.ugene.net/downloads/ugeneInstaller.dmg"
-#  download_link_ugene_installer_win: "http://archive.ugene.net/downloads/installer_windows_x32.exe"
+  #  download_link_ugene_installer_linux: "http://archive.ugene.net/downloads/ugeneInstaller_64bit.tar"
+  #  download_link_ugene_installer_mac: "http://archive.ugene.net/downloads/ugeneInstaller.dmg"
+  #  download_link_ugene_installer_win: "http://archive.ugene.net/downloads/installer_windows_x32.exe"
   download_link_ugene_installer_linux: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-linux-x86-64.tar.gz"
   download_link_ugene_installer_mac: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-mac-x86-64.dmg"
   download_link_ugene_installer_win: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-win-x86-64.exe"
