--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,23 +7,17 @@ plugins:
 
 # UGENE variables
 ugene:
-  release_version: "38.1"
-  release_date_MMM_YYYY_ru: "Март,2021"
-  release_date_MMM_YYYY_en: "March, 2021"
-  doc_version: "38"
+  release_version: "39"
+  release_date_MMM_YYYY_ru: "Июнь, 2021"
+  release_date_MMM_YYYY_en: "June, 2021"
+  doc_version: ""
   # Download links
-  download_link_ugene_latest_linux_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-linux-x86-64.tar.gz"
-  download_link_ugene_latest_mac_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-mac-x86-64.dmg"
-  download_link_ugene_latest_sources_gz: "https://github.com/ugeneunipro/ugene/archive/refs/tags/38.1.tar.gz"
-  download_link_ugene_latest_sources_zip: "https://github.com/ugeneunipro/ugene/archive/refs/tags/38.1.zip"
-  download_link_ugene_latest_win_x86_64: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-win-x86-64.exe"
-  download_link_ugene_latest_win_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-win-x86-64-portable.zip"
-  #  download_link_ugene_installer_linux: "http://archive.ugene.net/downloads/ugeneInstaller_64bit.tar"
-  #  download_link_ugene_installer_mac: "http://archive.ugene.net/downloads/ugeneInstaller.dmg"
-  #  download_link_ugene_installer_win: "http://archive.ugene.net/downloads/installer_windows_x32.exe"
-  download_link_ugene_installer_linux: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-linux-x86-64.tar.gz"
-  download_link_ugene_installer_mac: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-mac-x86-64.dmg"
-  download_link_ugene_installer_win: "https://github.com/ugeneunipro/ugene/releases/download/38.1/ugene-38.1-win-x86-64.exe"
+  download_link_ugene_latest_linux_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/39.0/ugene-39.0-linux-x86-64.tar.gz"
+  download_link_ugene_latest_mac_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/39.0/ugene-39.0-mac-x86-64.dmg"
+  download_link_ugene_latest_sources_gz: "https://github.com/ugeneunipro/ugene/archive/refs/tags/39.0.tar.gz"
+  download_link_ugene_latest_sources_zip: "https://github.com/ugeneunipro/ugene/archive/refs/tags/39.0.zip"
+  download_link_ugene_latest_win_x86_64: "https://github.com/ugeneunipro/ugene/releases/download/39.0/ugene-39.0-win-x86-64.exe"
+  download_link_ugene_latest_win_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/39.0/ugene-39.0-win-x86-64-portable.zip"
   next_release_tracker_link: "https://ugene.dev/tracker/projects/UGENE/issues/?filter=13756"
   static:
     cite_link: "https://doi.org/10.1093/bioinformatics/bts091"
