--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,19 +7,19 @@ plugins:
 
 # UGENE variables
 ugene:
-  release_version: "44.0"
-  release_date_MMM_YYYY_ru: "Август, 2022"
-  release_date_MMM_YYYY_tr: "Ağustos, 2022"
-  release_date_MMM_YYYY_en: "August, 2022"
+  release_version: "45.0"
+  release_date_MMM_YYYY_ru: "Ноябрь, 2022"
+  release_date_MMM_YYYY_tr: "Kasım, 2022"
+  release_date_MMM_YYYY_en: "November, 2022"
   doc_version: ""
   # Download links
-  download_link_ugene_latest_linux_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/44.0/ugene-44.0-linux-x86-64.tar.gz"
-  download_link_ugene_latest_mac_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/44.0/ugene-44.0-mac-x86-64.dmg"
-  download_link_ugene_latest_sources_gz: "https://github.com/ugeneunipro/ugene/archive/refs/tags/44.0.tar.gz"
-  download_link_ugene_latest_sources_zip: "https://github.com/ugeneunipro/ugene/archive/refs/tags/44.0.zip"
-  download_link_ugene_latest_win_x86_64: "https://github.com/ugeneunipro/ugene/releases/download/44.0/ugene-44.0-win-x86-64.exe"
-  download_link_ugene_latest_win_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/44.0/ugene-44.0-win-x86-64.zip"
-  next_release_tracker_link: "https://ugene.dev/tracker/issues/?filter=14951"
+  download_link_ugene_latest_linux_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/45.0/ugene-45.0-linux-x86-64.tar.gz"
+  download_link_ugene_latest_mac_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/45.0/ugene-45.0-mac-x86-64.dmg"
+  download_link_ugene_latest_sources_gz: "https://github.com/ugeneunipro/ugene/archive/refs/tags/45.0.tar.gz"
+  download_link_ugene_latest_sources_zip: "https://github.com/ugeneunipro/ugene/archive/refs/tags/45.0.zip"
+  download_link_ugene_latest_win_x86_64: "https://github.com/ugeneunipro/ugene/releases/download/45.0/ugene-45.0-win-x86-64.exe"
+  download_link_ugene_latest_win_x86_64_portable: "https://github.com/ugeneunipro/ugene/releases/download/45.0/ugene-45.0-win-x86-64.zip"
+  next_release_tracker_link: "https://ugene.dev/tracker/issues/?filter=14952"
   static:
     cite_link: "https://doi.org/10.1093/bioinformatics/bts091"
 
